# gaiathon

./: .gitignore  README.md  pyproject.toml
EcoFriendlyApp/: README.md
detectro/: dataset_utils.py  dumpsite_detection_report.json  main.py  open.py  resize.py  train.py
detectro/output/: events.out.tfevents.1750790821.Mtende.10128.0  events.out.tfevents.1750800585.Mtende.20546.0  metrics.json
flaskr/: .env.shared  ORS  __init__.py  auth.py  blog.py  dashbaord.py  db.py  detection.py  schema.sql
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/dashboard/: add.html  dumpsite.html  index.html  location.html  reports.html  result.html  sensor.html
flaskr/templates/dumpsite/: about.html  batch.html  batch_results.html  coordinates.html  history.html  index.html  results.html  upload.html
output/: events.out.tfevents.1750790351.Mtende.9513.0  events.out.tfevents.1750790588.Mtende.9907.0
raspberrypi/: README.md  rasberry.py
